fix: align

--- a/src/components/EmptyList/EmptyList.module.css
+++ b/src/components/EmptyList/EmptyList.module.css
@@ -11,6 +11,7 @@
   width: 50%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1.5rem;
 }
 
